# ouseful-ai-magics

./: README.md  pyproject.toml
ouseful_ai_magics/: __init__.py  llm_magic.py  sd_magic.py  sdkit_magic.py
