[project]
name = "ouseful-ai-magics"
version = "0.0.2"
description = "Simple magics for running generative models in Jupyter notebooks."
readme = "README.md"
authors = [{name = "Tony Hirst"}]
license = {text = "MIT"}
dependencies = [
    "ipython",
    "llm",
    "gpt4all", "llm-gpt4all",
    "sdkit"
]

[project.urls]
Homepage = "https://github.com/innovationOUtside/ouseful-ai-magics/"